# carve-py

./: .gitignore  Cargo.toml  README.md  UNBLOCKS.md  carve.pyi  pyproject.toml
.github/workflows/: ci.yml
mkdocs-proof/: mkdocs.yml  mkdocs_carve.py  pyproject.toml  sample.crv
mkdocs-proof/mkdocs_carve_proof.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: check-panic-unwind.sh
src/: lib.rs
tests/: test_byte_identical.py  test_carve.py  test_extension_id_namespace.py  test_static_mode.py
