[package]
name = "python-carve"
version = "0.1.0"
edition = "2021"
description = "Python bindings (PyO3) for the Carve markup language, over the carve-rs engine."
license = "MIT"
repository = "https://github.com/markup-carve/carve-py"

[lib]
# The compiled Python extension module is named `carve`.
name = "carve"
crate-type = ["cdylib"]

# IMPORTANT: do NOT set `panic = "abort"` anywhere (no `[profile.release]`
# panic setting here, and none inherited from a workspace). PyO3 wraps every
# Rust call this module exposes in catch_unwind to convert a Rust panic into a
# Python exception; that conversion only works under `panic = "unwind"` (the
# Cargo default). Setting `panic = "abort"` silently removes the safety net and
# a panic would abort the host Python interpreter. The CI step
# (scripts/check-panic-unwind.sh) enforces this.

[dependencies]
pyo3 = { version = "0.27", features = ["abi3-py38", "extension-module"] }

# --- Carve engine dependency ---------------------------------------------
# Renamed to `carve_rs` in Rust code (via `package = "carve-lang"`) so it does
# not collide with our own `carve` #[pymodule]. The crate is published as
# `carve-lang` (the name `carve` was taken on crates.io).
#
# The static render-mode API (Mode::Static, StaticRenderers, with_mode/
# with_renderers) is now merged on carve-rs main, so we track main directly.
carve_rs = { package = "carve-lang", git = "https://github.com/markup-carve/carve-rs", branch = "main" }
#
# For local development against a sibling checkout, swap the line above for a
# path dependency:
# carve_rs = { package = "carve-lang", path = "../carve-rs" }
